@@ -37,6 +37,7 @@ namespace Yafc {
 
         public override void Build(ImGui gui) {
             EntityBeacon? defaultBeacon = Database.usableBeacons.FirstOrDefault();
+            _ = Database.GetDefaultModuleFor(defaultBeacon, out Module? defaultBeaconModule);
 
             BuildHeader(gui, "Module autofill parameters");
             BuildSimple(gui, modules);
@@ -53,7 +54,7 @@ namespace Yafc {
 
             gui.AllocateSpacing();
             gui.BuildText("Beacons & beacon modules:", Font.subheader);
-            if (defaultBeacon is null) {
+            if (defaultBeacon is null || defaultBeaconModule is null) {
                 gui.BuildText("Your mods contain no beacons, or no modules that can be put into beacons.");
             }
             else {
@@ -85,12 +86,16 @@ namespace Yafc {
                 gui.AllocateSpacing();
                 gui.BuildText("Override beacons:", Font.subheader);
                 if (modules.overrideCrafterBeacons.Count > 0) {
-                    gui.BuildText("  Click to change beacon", topOffset: -0.5f);
+                    using (gui.EnterGroup(new Padding(1, 0, 0, 0))) {
+                        gui.BuildText("Click to change beacon, right-click to change module", topOffset: -0.5f);
+                        gui.BuildText("Select the 'none' item in either prompt to remove the override.", topOffset: -0.5f);
+                    }
                 }
                 using (gui.EnterRow()) {
                     foreach ((EntityCrafter crafter, BeaconOverrideConfiguration beaconInfo) in modules.overrideCrafterBeacons) {
                         GoodsWithAmountEvent click = gui.BuildFactorioObjectWithEditableAmount(crafter, beaconInfo.beaconCount, UnitOfMeasure.None, out float newAmount);
                         gui.DrawIcon(new Rect(gui.lastRect.TopLeft, new Vector2(1.25f, 1.25f)), beaconInfo.beacon.icon, SchemeColor.Source);
+                        gui.DrawIcon(new Rect(gui.lastRect.TopRight - new Vector2(1.25f, 0), new Vector2(1.25f, 1.25f)), beaconInfo.beaconModule.icon, SchemeColor.Source);
                         switch (click) {
                             case GoodsWithAmountEvent.LeftButtonClick:
                                 SelectSingleObjectPanel.SelectWithNone(Database.allBeacons, "Select beacon", selectedBeacon => {
@@ -103,7 +108,14 @@ namespace Yafc {
                                 }, noneTooltip: "Click here to remove the current override.");
                                 return;
                             case GoodsWithAmountEvent.RightButtonClick:
-                                modules.RecordUndo().overrideCrafterBeacons.Remove(crafter);
+                                SelectSingleObjectPanel.SelectWithNone(Database.allModules.Where(m => modules.overrideCrafterBeacons[crafter].beacon.CanAcceptModule(m.moduleSpecification)), "Select beacon module", selectedModule => {
+                                    if (selectedModule is null) {
+                                        modules.RecordUndo().overrideCrafterBeacons.Remove(crafter);
+                                    }
+                                    else {
+                                        modules.RecordUndo().overrideCrafterBeacons[crafter].beaconModule = selectedModule;
+                                    }
+                                }, noneTooltip: "Click here to remove the current override.");
                                 return;
                             case GoodsWithAmountEvent.TextEditing:
                                 modules.RecordUndo().overrideCrafterBeacons[crafter].beaconCount = (int)newAmount;
@@ -115,7 +127,7 @@ namespace Yafc {
                 using (gui.EnterRow(allocator: RectAllocator.Center)) {
                     if (gui.BuildButton("Add an override for a building type")) {
                         SelectMultiObjectPanel.Select(Database.allCrafters.Where(x => x.allowedEffects != AllowedEffects.None && !modules.overrideCrafterBeacons.ContainsKey(x)), "Add exception(s) for:",
-                            crafter => modules.RecordUndo().overrideCrafterBeacons[crafter] = new(modules.beacon ?? defaultBeacon, modules.beaconsPerBuilding));
+                            crafter => modules.RecordUndo().overrideCrafterBeacons[crafter] = new(modules.beacon ?? defaultBeacon, modules.beaconsPerBuilding, modules.beaconModule ?? defaultBeaconModule));
                     }
                 }
             }
