@@ -13,6 +13,9 @@
 ----------------------------------------------------------------------------------------------------------------------
 Version 0.7.3
 Date: soon
+    Features:
+        - Add the option to specify how many beacons, with what modules, should be applied on a per-building-type
+          basis, in addition to the global and per-recipe-row settings.
     Bugfixes:
         - Fix PageSearch scrollbar not working.
     Internal changes:
